--- a/config/samples/kustomization.yaml
+++ b/config/samples/kustomization.yaml
@@ -1,4 +1,5 @@
 ## Append samples you want in your CSV to this file as resources ##
 resources:
 - crd_v1alpha1_virtualserver.yaml
+- crd_v1alpha1_streamserver.yaml
 #+kubebuilder:scaffold:manifestskustomizesamples
