--- a/deploy/netagent.yaml
+++ b/deploy/netagent.yaml
@@ -17,6 +17,72 @@ metadata:
   annotations:
     controller-gen.kubebuilder.io/version: v0.11.1
   creationTimestamp: null
+  name: streamservers.crd.chulinx
+spec:
+  group: crd.chulinx
+  names:
+    kind: StreamServer
+    listKind: StreamServerList
+    plural: streamservers
+    singular: streamserver
+  scope: Namespaced
+  versions:
+  - additionalPrinterColumns:
+    - description: The Nginx server listen_port
+      jsonPath: .spec.listenPort
+      name: ListenPort
+      type: string
+    - jsonPath: .metadata.creationTimestamp
+      name: Age
+      type: date
+    name: v1alpha1
+    schema:
+      openAPIV3Schema:
+        description: StreamServer is the Schema for the streamservers API
+        properties:
+          apiVersion:
+            description: 'APIVersion defines the versioned schema of this representation of an object. Servers should convert recognized schemas to the latest internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources'
+            type: string
+          kind:
+            description: 'Kind is a string value representing the REST resource this object represents. Servers may infer this from the endpoint the client submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
+            type: string
+          metadata:
+            type: object
+          spec:
+            description: StreamServerSpec defines the desired state of StreamServer
+            properties:
+              listenPort:
+                format: int32
+                type: integer
+              name:
+                type: string
+              nameSpace:
+                type: string
+              port:
+                format: int32
+                type: integer
+              service:
+                type: string
+            type: object
+          status:
+            description: StreamServerStatus defines the observed state of StreamServer
+            properties:
+              state:
+                description: 'INSERT ADDITIONAL STATUS FIELD - define observed state of cluster Important: Run "make" to regenerate code after modifying this file'
+                type: string
+            type: object
+        type: object
+    served: true
+    storage: true
+    subresources:
+      status: {}
+---
+apiVersion: apiextensions.k8s.io/v1
+kind: CustomResourceDefinition
+metadata:
+  annotations:
+    controller-gen.kubebuilder.io/version: v0.11.1
+  creationTimestamp: null
   name: virtualservers.crd.chulinx
 spec:
   group: crd.chulinx
@@ -28,11 +94,12 @@ spec:
   scope: Namespaced
   versions:
   - additionalPrinterColumns:
-    - description: The Nginx server server_name
+    - description: The Nginx server listen_port
       jsonPath: .spec.listenPort
       name: ListenPort
       type: string
-    - jsonPath: .spec.serverName
+    - description: The Nginx server server_name
+      jsonPath: .spec.serverName
       name: ServerName
       type: string
     - jsonPath: .metadata.creationTimestamp
@@ -157,6 +224,32 @@ metadata:
   creationTimestamp: null
   name: netagent-manager-role
 rules:
+- apiGroups:
+  - crd.chulinx
+  resources:
+  - streamservers
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
+  - crd.chulinx
+  resources:
+  - streamservers/finalizers
+  verbs:
+  - update
+- apiGroups:
+  - crd.chulinx
+  resources:
+  - streamservers/status
+  verbs:
+  - get
+  - patch
+  - update
 - apiGroups:
   - crd.chulinx
   resources:
@@ -378,7 +471,7 @@ spec:
         - /bin/sh
         - -x
         - /entrypoint.sh
-        image: chulinx/netagent:v0.0.1
+        image: chulinx/netagent:v0.2
         livenessProbe:
           httpGet:
             path: /healthz
