--- a/deploy/netagent.yaml
+++ b/deploy/netagent.yaml
@@ -56,13 +56,16 @@ spec:
                 type: integer
               name:
                 type: string
-              nameSpace:
-                type: string
-              port:
-                format: int32
-                type: integer
-              service:
-                type: string
+              proxy:
+                properties:
+                  nameSpace:
+                    type: string
+                  port:
+                    format: int32
+                    type: integer
+                  service:
+                    type: string
+                type: object
             type: object
           status:
             description: StreamServerStatus defines the observed state of StreamServer
