[bugfix] fix template render error

--- a/config/crd/bases/crd.chulinx_virtualservers.yaml
+++ b/config/crd/bases/crd.chulinx_virtualservers.yaml
@@ -71,6 +71,7 @@ spec:
                     proxyHttpVersion:
                       type: string
                     proxyRedirect:
+                      default: true
                       description: ProxyRedirect set proxy_redirect     off;
                       type: boolean
                     scheme:
